resources/css/dashboard.css
body {
  background-image: none;
}

.back {
  background-image: none;
  background-color: #fff;
}

.dashboard,
.ticket_space {
  background-color: #979797;
  padding-top: 80px;
  margin-bottom: 6em;
  height: 100%;
}

.panel {
  box-shadow: #000 0px 2px 4px;
  background-color: white;
  margin-bottom: 1em;
  border-radius: 5px;
}

.panel-heading {
  background-color: #ddd;
  color: #000;
  padding-left: 1em;
  border-radius: 5px 5px 0 0;
  box-shadow: #000 0px 2px 4px;
  font-weight: 700;
  height: 2em;
}

.panel-title {
  vertical-align: middle;
}

.panel-body {
  padding: 0.5em;
  color: #000;
}

.panel-body form {
  border-radius: 5px;
  background-color: #ddd;
  color: #000;
}

.form-group {
  padding-left: 0.5em;
  padding-right: 0.5em;
  display: block;
}

.form-group input,
select,
textarea {
  width: 100%;
}

.form-group img {
  width: 20px;
}

label {
  color: #777;
}

textarea #parts {
  height: 100px;
}

.res_code {
  height: 20px;
}

#pagecontent {
  height: 100%;
}

#imgleft {
  position: fixed;
  bottom: 80px;
  left: 5px;
  width: 50px;
  height: auto;
}

#imgright {
  position: fixed;
  bottom: 80px;
  right: 5px;
  width: 50px;
  height: auto;
}

#activeOrders>a>.row,
#closedOrders>a>.row {
  border-radius: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  color: #000;
  box-shadow: #000 0px 2px 4px;
}

#activeOrders>a>.row:hover,
#closedOrders>a>.row:hover {
  background-color: #0C1434;
  color: #fff;
}

#activeOrders>a:nth-child(odd)>.row,
#closedOrders>a:nth-child(odd)>.row {
  background-color: #eee;
}

#activeOrders>a:nth-child(odd)>.row:hover,
#closedOrders>a:nth-child(odd)>.row:hover {
  background-color: #0C1434;
  color: #fff;
}

#activeOrders>a>div>div.col-sm-1>img,
#closedOrders>a>div>div.col-sm-1>img {
  width: 25px;
  height: auto;
}

#activeOrders>a,
#closedOrders>a {
  text-decoration: none;
  color: #000;
}

.card-style {
  font-size: 20px !important;
  height: 3.5em !important;
  margin: 0px !important;
  margin-left: 0px !important;
  margin-right: 0px !important;
  margin-top: 0px !important;
  margin-bottom: 0px !important;
  /*text-align: left!important;*/
  color: #FFF !important;
  border: #000 1px solid;
}

a .card-style {
  color: #fff;
}

a:hover {
  text-decoration-color: #fff;
}

.card-open {
  background-color: #B5CA68 !important;
}

.card-onHold {
  background-color: #375E97 !important;
}

.card-inProgress {
  background-color: #FFBB00 !important;
}

.card-closed {
  background-color: #FB6542 !important;
}

/* table, tr, th, td{
  background-color: ##F1F1F1!important;
}  */

